@@ -1,6 +1,9 @@
-5
+6
 lucen/A
 lucene
 mahout/A
 olr/B
 ab/C
+Apach/A
+foo/D
+Foo/E
